--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\0036L1744\AppData\Local\Temp\testng-eclipse--439893402\testng-customsuite.xml</span>
+                    <span>C:\Users\0036L1744\AppData\Local\Temp\testng-eclipse--1757287913\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">7 methods,   7 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,37 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="restAssured.restAssured.Assignment" class="method navigator-link" hash-for-method="testcase1">testcase1</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="restAssured.restAssured.Assignment" class="method navigator-link" hash-for-method="testcase2">testcase2</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="restAssured.restAssured.Assignment" class="method navigator-link" hash-for-method="testcase3">testcase3</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="restAssured.restAssured.Assignment" class="method navigator-link" hash-for-method="testcase4">testcase4</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="restAssured.restAssured.Assignment" class="method navigator-link" hash-for-method="testcase5">testcase5</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="restAssured.restAssured.Assignment" class="method navigator-link" hash-for-method="testcase6">testcase6</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="restAssured.restAssured.Assignment" class="method navigator-link" hash-for-method="testcase7">testcase7</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +157,65 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="testcase1">
+                  </a> <!-- testcase1 -->
+                  <span class="method-name">testcase1</span>
+                  <em>
+(perform the post operation using escape character)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testcase2">
+                  </a> <!-- testcase2 -->
+                  <span class="method-name">testcase2</span>
+                  <em>
+(perform the get operation)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="testcase3">
                   </a> <!-- testcase3 -->
                   <span class="method-name">testcase3</span>
+                  <em>
+(perform the post operation using jsonfile)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testcase4">
+                  </a> <!-- testcase4 -->
+                  <span class="method-name">testcase4</span>
+                  <em>
+(perform the put operation using escape character)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testcase5">
+                  </a> <!-- testcase5 -->
+                  <span class="method-name">testcase5</span>
+                  <em>
+(perform the put operation using jsonfile character)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testcase6">
+                  </a> <!-- testcase6 -->
+                  <span class="method-name">testcase6</span>
+                  <em>
+(perform the delete operation)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testcase7">
+                  </a> <!-- testcase7 -->
+                  <span class="method-name">testcase7</span>
+                  <em>
+(verify the 404 error code)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +223,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\0036L1744\AppData\Local\Temp\testng-eclipse--439893402\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\0036L1744\AppData\Local\Temp\testng-eclipse--1757287913\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,16 +272,40 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(7);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testcase3')
+data.setCell(0, 1, 'testcase1')
 data.setCell(0, 2, 'restAssured.restAssured.Assignment')
-data.setCell(0, 3, 5088);
+data.setCell(0, 3, 4844);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'testcase5')
+data.setCell(1, 2, 'restAssured.restAssured.Assignment')
+data.setCell(1, 3, 2343);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'testcase2')
+data.setCell(2, 2, 'restAssured.restAssured.Assignment')
+data.setCell(2, 3, 1939);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'testcase7')
+data.setCell(3, 2, 'restAssured.restAssured.Assignment')
+data.setCell(3, 3, 1835);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'testcase3')
+data.setCell(4, 2, 'restAssured.restAssured.Assignment')
+data.setCell(4, 3, 1763);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'testcase4')
+data.setCell(5, 2, 'restAssured.restAssured.Assignment')
+data.setCell(5, 3, 1711);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'testcase6')
+data.setCell(6, 2, 'restAssured.restAssured.Assignment')
+data.setCell(6, 3, 1541);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 15 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -210,18 +320,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">restAssured.restAssured.Assignment</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">testcase2</span>
-                <br/>
-                <span class="ignored-method-name">testcase1</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -232,8 +333,32 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">restAssured.restAssured.Assignment</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testcase3</span>
+                <span class="method-name">testcase1</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testcase2</span>
+                <span class="method-start">4851 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testcase3</span>
+                <span class="method-start">6794 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testcase4</span>
+                <span class="method-start">8560 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testcase5</span>
+                <span class="method-start">10274 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testcase6</span>
+                <span class="method-start">12619 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testcase7</span>
+                <span class="method-start">14163 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
