--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,16 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,207</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">7</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">16,059</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">restAssured.restAssured.Assignment</td><td><a href="#m0">testcase3</a></td><td rowspan="1">1653387771456</td><td rowspan="1">5088</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="7">restAssured.restAssured.Assignment</td><td><a href="#m0">testcase1</a></td><td rowspan="1">1653390579881</td><td rowspan="1">4844</td></tr><tr class="passedeven"><td><a href="#m1">testcase2</a></td><td rowspan="1">1653390584732</td><td rowspan="1">1939</td></tr><tr class="passedeven"><td><a href="#m2">testcase3</a></td><td rowspan="1">1653390586675</td><td rowspan="1">1763</td></tr><tr class="passedeven"><td><a href="#m3">testcase4</a></td><td rowspan="1">1653390588441</td><td rowspan="1">1711</td></tr><tr class="passedeven"><td><a href="#m4">testcase5</a></td><td rowspan="1">1653390590155</td><td rowspan="1">2343</td></tr><tr class="passedeven"><td><a href="#m5">testcase6</a></td><td rowspan="1">1653390592500</td><td rowspan="1">1541</td></tr><tr class="passedeven"><td><a href="#m6">testcase7</a></td><td rowspan="1">1653390594044</td><td rowspan="1">1835</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">restAssured.restAssured.Assignment#testcase3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">restAssured.restAssured.Assignment#testcase1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">restAssured.restAssured.Assignment#testcase2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">restAssured.restAssured.Assignment#testcase3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">restAssured.restAssured.Assignment#testcase4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">restAssured.restAssured.Assignment#testcase5</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">restAssured.restAssured.Assignment#testcase6</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">restAssured.restAssured.Assignment#testcase7</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
